--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@ limitations under the License.</p>
     <string name="stop">Stop</string>
     <string name="disconnect">Disconnect</string>
     <string name="save">Save</string>
+    <string name="configure">Configure</string>
     <string name="configure_scene_1">Configure scene 1</string>
     <string name="configure_scene_2">Configure scene 2</string>
     <string name="done">Done</string>
@@ -74,7 +75,10 @@ limitations under the License.</p>
     <string name="no_items">no items</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="configure">Configure</string>
     <string name="smarthome_service_is_working">SmartHome service is working</string>
+    <string name="not_configured">Not configured</string>
+    <string name="configured">Configured</string>
+    <string name="hold">Hold</string>
+    <string name="acknowledgements">Acknowledgements</string>
 
 </resources>
